// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api v2 contract > snapshots response shapes so breaking changes fail CI > eta 1`] = `
{
  "baselineEta": "string",
  "confidence": "number",
  "delayMin": "number",
  "eta": "string",
  "features": [
    {
      "name": "string",
      "unit": "string",
      "value": "number",
    },
  ],
  "improvementMin": "number",
  "modelVersion": "string",
  "p50": "string",
  "p80": "string",
  "p90": "string",
  "reason": "string",
  "source": "string",
  "station": "string",
  "trainNo": "string",
  "updatedAt": "number",
}
`;

exports[`api v2 contract > snapshots response shapes so breaking changes fail CI > events 1`] = `
{
  "baselineEta": "string",
  "confidence": "number",
  "delayMin": "number",
  "eta": "string",
  "features": [
    {
      "name": "string",
      "unit": "string",
      "value": "number",
    },
  ],
  "improvementMin": "number",
  "modelVersion": "string",
  "p50": "string",
  "p80": "string",
  "p90": "string",
  "reason": "string",
  "source": "string",
  "station": "string",
  "trainNo": "string",
  "updatedAt": "number",
}
`;

exports[`api v2 contract > snapshots response shapes so breaking changes fail CI > forecast 1`] = `
{
  "halts": [
    {
      "delayMin": "number",
      "eta": "string",
      "p50": "string",
      "p80": "string",
      "p90": "string",
      "sequence": "number",
      "stationCode": "string",
    },
  ],
  "modelVersion": "string",
  "runDate": "string",
  "source": "string",
  "trainNo": "string",
  "updatedAt": "number",
}
`;

exports[`api v2 contract > snapshots response shapes so breaking changes fail CI > openapi-paths 1`] = `
[
  "/api/v2/health",
  "/api/v2/metrics",
  "/api/v2/eta",
  "/api/v2/train/{no}/forecast",
  "/api/v2/station/{code}/board",
  "/api/v2/network/congestion",
  "/api/v2/train/{no}/geojson",
  "/api/v2/observations",
  "/api/v2/events",
  "/api/v2/openapi.json",
  "/api/v2/live/positions",
  "/api/v2/live/{no}",
  "/api/v2/internal/refresh",
]
`;
